# superchain-registry

./: .deploy  .editorconfig  .env.example  .gitignore  .golangci.yml  .repo-root  CHAINS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  blobBaseFeeScalar.sh  chainList.json  chainList.toml  codecov.yml  deploy-config.json  foundry.toml  go.mod  go.work  go.work.sum  justfile  mise.toml  package-lock.json  package.json  rollup.json  sepolia-state.json
.circleci/: .gitignore  README.md  artifact_upload_config.yml  circleci-upload-chain-artifacts.sh  config.yml  continue_config-temp.yml  continue_config.yml  continue_interactive.yml  main_config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: diff-workflow.yml  genesis-diff.yml  maintainer-approval.yml  publish.yml  release.yml  rollup-config-and-genesis-diff.yml  rollup-config-diff.yml  rust-checks.yml  upload-chain-artifacts.yml  validation.yml
.staging/: agr0.json.zst  agr1.json.zst  arena-z-testnet.toml  boba.json.zst  boba.toml  camp.toml  celo-sep.json.zst  celo-sep.toml  celo.toml  eris-0.json.zst  eris-0.toml  eris-1.json.zst  eris-1.toml  genesis.json.zst  intent.toml  interop-rc-alpha-0.json.zst  interop-rc-alpha-0.toml  interop-rc-alpha-1.toml  meta.toml  mychain.json.zst  mychain.toml  radius_testnet.json.zst  radius_testnet.toml  rehearsal-0-bn-0.toml  rehearsal-0-bn-1.toml  scoi.json.zst  scoi.toml  settlus-mainnet.toml  settlus-sepolia.toml  settlus.toml  silentdata-mainnet.toml  sova.json.zst  sova.toml  state.json  superchain.toml  test.json.zst  testchain.json.zst  testchain.toml
add-chain/: .env.test  .gitignore  addresses.go  chain_config.go  check-rollup-config.go  contract_addresses.go  e2e_test.go  flags.go  genesis.go  go.mod  go.sum  main.go  promote-to-standard.go  read_addresses.go  tmp.json  utils.go
add-chain/cmd/: add-chain.go  add-new-chain.go  aggregate.go  check-genesis-config.go  check-genesis.go  check-rollup-config.go  compress-genesis.go  convert-to-toml.go  promote-to-standard.go  update-configs.go
add-chain/config/: config.go  plasma.go  plasma_test.go
add-chain/flags/: flags.go
add-chain/testdata/: .env.test
add-chain/utils/: addresses.go  utils.go
addchain/: chain_config.go  contract_addresses.go  go.mod  go.sum  main.go  utils.go
arena-z-testnet/: .deploy  rollup.json
assets/: README.md
bindings/java-bindings/: build.gradle  settings.gradle
bindings/rust/: Cargo.toml  README.md
bindings/rust-bindings/: CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile
bindings/rust-bindings/etc/: chainList.toml  configs.toml
bindings/rust-bindings/src/: chain_list.rs  embed.rs  init.rs  lib.rs  superchain.rs
bindings/rust-primitives/: CHANGELOG.md  Cargo.toml  README.md
bindings/rust-primitives/src/: addresses.rs  block.rs  chain_config.rs  contracts.rs  fee_params.rs  genesis.rs  lib.rs  predeploys.rs  rollup_config.rs  superchain.rs  system_config.rs
bindings/rust/src/: init.rs  lib.rs  superchain.rs  util.rs
bindings/superchain/: Cargo.toml  Justfile  README.md
bindings/superchain/src/: lib.rs
chains/: mytestchain.json
docs/: add-chain.md  bindings.md  glossary.md  hardfork-activation-inheritance.md  ops.md  scr-ops.md
documentation/: base-readme.md  glossary.md
ops/: e2e_test.go  go.mod  go.sum  go.work  justfile  main.go
ops/cmd/: add-new-chain.go  check-genesis.go  check-rollup-config.go  compress-genesis.go  promote-to-standard.go  update-configs.go
ops/config/: config.go
ops/flags/: flags.go
ops/utils/: addresses.go
scr-ops/: .gitignore  e2e_test.go  go.mod  main.go
scr-ops/cmd/: add-new-chain.go  check-genesis.go  check-rollup-config.go  compress-genesis.go  promote-to-standard.go  update-configs.go
scr-ops/config/: config.go
script/: CheckSecurityConfigs.s.sol
scripts/: CheckNetworkMultiSigConfigs.s.sol  CheckSecurityConfigs.s.sol  add-chain.sh  add-frontier-chain.sh  add-standard-chain.sh  check-security-configs.sh  codegen.js  codegen.sh  identify_consumers.sh  promote-to-standard.sh
scripts/superchain-config-helper/: go.mod  go.sum  superchain.go
superchain/: README.md  address_list.go  chainList.json  chainList.toml  checksum_test.go  go.mod  go.sum  init.go  params.go  semver.yaml  superchain-version_test.go  superchain.go  superchain_test.go  util.go  util_test.go
superchain/codegen/: main.go
superchain/configs/: README.md  bob.toml  chainList.json  chainList.toml  chainids.json  configs.json  configs.toml
superchain/extra/: README.MD
superchain/implementations/: implementations.yaml
validation/: .gitignore  README.md  chainId_test.go  chainid-rpc_test.go  context.go  data-availability-type_test.go  data-availability_test.go  doc.go  entrypoint_test.go  exclusions_test.go  expected-bytecode.go  fault_game_params_test.go  gas-limit_test.go  gas-token_test.go  gas_limit.go  gas_limit_test.go  gas_token.go  gas_token_test.go  genesis-allocs_test.go  genesis-predeploy_test.go  go.mod  go.sum  governed-by-optimism_test.go  gpo-params_test.go  immutable-references.go  init.go  init_test.go  key-handover_test.go  l2oo_test.go  optimism-portal-2-params_test.go  params.go  params_test.go  predeploy-proxyadmin_test.go  prestates.go  promotion_test.go  public-rpc_test.go  resource-config_test.go  results.toml  retry.go  roles.go  (+23 more)
validation/common/: common.go
validation/generate-genesis/: main.go
validation/generate-rollup-config/: diff-configs.sh  main.go
validation/genesis/: commands.go  config.patch  foundry-config.patch  genesis-allocs_test.go  genesis-creation-commands.go  genesis-predeploy_test.go  genesis.go  monorepo-outputs.sh  runs.patch  types.go  utils.go
validation/standard/: config.go  init.go  init_test.go  op-program-releases.toml  params.go  readme.md  roles.go  standard-allocs.toml  standard-bytecodes.toml  standard-config-mainnet.toml  standard-config-params-mainnet.toml  standard-config-params-sepolia-dev-0.toml  standard-config-params-sepolia.toml  versions.go  (+17 more)
(+736 files in other folders)
