[package]
name = "superchain-registry"
description = "Bindings for the Superchain Registry"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["OP Contributors"]
repository = "https://github.com/ethereum-optimism/superchain-registry"
homepage = "https://github.com/ethereum-optimism/superchain-registry/bindings/rust"

[dependencies]
# types
alloy-primitives = { version = "0.7.1", default-features = false }
alloy-genesis = { version = "0.1", default-features = false }
superchain-primitives = { path = "../rust-primitives", version = "0.1", default-features = false, features = ["serde"] }

# serialization
serde = { version = "1.0.203", default-features = false, features = ["derive", "alloc"] }
toml = { version = "0.8.14" }
serde_repr = "0.1"

# utils
hashbrown = { version = "0.14.3", features = ["serde"] }
lazy_static = "1.4.0"

[features]
default = ["std"]
std = ["superchain-primitives/std"]
