[package]
name = "superchain-registry"
description = "Bindings for the Superchain Registry"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OP Contributors"]
repository = "https://github.com/ethereum-optimism/superchain-registry"
homepage = "https://github.com/ethereum-optimism/superchain-registry/bindings/rust"

[dependencies]
# types
alloy-primitives = { version = "0.7.1", default-features = false }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "e3f2f07", default-features = false }

# serialization
serde = { version = "1.0.203", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
serde_repr = "0.1"

# utils
hashbrown = { version = "0.14.3", features = ["serde"] }
include_dir = { version = "0.7.3" }
lazy_static = "1.4.0"

[features]
default = ["std"]
std = []
