[package]
name = "superchain"
description = "The Superchain Registry"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OP Contributors"]
repository = "https://github.com/ethereum-optimism/superchain-registry"
homepage = "https://github.com/ethereum-optimism/superchain-registry/bindings/superchain"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
superchain-primitives = { path = "../rust-primitives", version = "0.2.2", default-features = false }

# `serde` is optional, but enabled by default
# Since superchain-registry requires `serde`, we mark it as optional
superchain-registry = { path = "../rust-bindings", version = "0.2.6", optional = true, default-feature = false }

[features]
default = ["serde", "std"]

serde = [
  "dep:superchain-registry",
  "superchain-primitives/serde",
]

std = [
  "serde",
  "dep:superchain-registry",
  "superchain-registry/std",
  "superchain-primitives/std",
]
